# MIPS_simulator

MIPS_simulator/: README.md  _README.md  grading.md  pyproject.toml  requirements.txt  result  test-requirements.txt
MIPS_simulator/src/: ANDgate.py  IF_ID_Register.py  add.py  alu.py  aluControl.py  bufferGate.py  control.py  cpuElement.py  dataMemory.py  instructionMemory.py  jumpmerge.py  memory.py  mipsSimulator.py  mux.py  notgate.py  orgate.py  registerFile.py  shiftLeft16.py  shiftLeft2.py  sign_extend.py  simulator.py
MIPS_simulator/tests/: result  sumresult.py  test.sh  test_mips.py
